--- a/interest.html
+++ b/interest.html
@@ -328,11 +328,11 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">납입원금(Principal)</div>
+                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">납입금</div>
                                             <div id="resultAmt1" class="h5 mb-0 font-weight-bold text-gray-800">0원</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-won-sign fa-2x text-gray-300"></i>
+                                            <i class="fa fa-user fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -344,11 +344,11 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">이자(Interest)</div>
+                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">총이자</div>
                                             <div id="resultAmt2" class="h5 mb-0 font-weight-bold text-gray-800">0원</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fa fa-plus-circle fa-2x text-gray-300"></i>
+                                            <i class="fas fa-money-bill fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -364,7 +364,7 @@
                                             <div id="resultAmt3" class="h5 mb-0 font-weight-bold text-gray-800">0원</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fa fa-university fa-2x text-gray-300"></i>
+                                            <i class="fa fa-rocket fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
