--- a/interest.html
+++ b/interest.html
@@ -400,16 +400,16 @@
                                             <thead>
                                                 <tr>
                                                     <th class="text-center">연도</th>
-                                                    <th class="text-center">납입원금</th>
-                                                    <th class="text-center">이자</th>
+                                                    <th class="text-center">납입금</th>
+                                                    <th class="text-center">총이자</th>
                                                     <th class="text-center">수령액</th>
                                                 </tr>
                                             </thead>
                                             <tfoot>
                                                 <tr>
                                                     <th class="text-center">연도</th>
-                                                    <th class="text-center">납입원금</th>
-                                                    <th class="text-center">이자</th>
+                                                    <th class="text-center">납입금</th>
+                                                    <th class="text-center">총이자</th>
                                                     <th class="text-center">수령액</th>
                                                 </tr>
                                             </tfoot>
@@ -422,37 +422,6 @@
                         </div>
 
                     </div>
-
-                    <!-- DataTales
-                    <div class="card shadow mb-4" style="display: none;" id="resultTable">
-                        <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-dark">연도별 수령금액</h6>
-                        </div>
-                        <div class="card-body">
-                            <div class="table-responsive">
-                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                    <thead>
-                                        <tr>
-                                            <th class="text-center">연도</th>
-                                            <th class="text-center">납입원금</th>
-                                            <th class="text-center">이자</th>
-                                            <th class="text-center">수령액</th>
-                                        </tr>
-                                    </thead>
-                                    <tfoot>
-                                        <tr>
-                                            <th class="text-center">연도</th>
-                                            <th class="text-center">납입원금</th>
-                                            <th class="text-center">이자</th>
-                                            <th class="text-center">수령액</th>
-                                        </tr>
-                                    </tfoot>
-                                    <tbody>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div> -->
 
                 </div>
                 <!-- /.container-fluid -->
