--- a/lotto.html
+++ b/lotto.html
@@ -9,7 +9,10 @@
     <meta name="author" content="v-if">
     <meta name="keyword" content="대출 계산기, 대출 이자 계산기, 원리금 상환 계산기, 원리금균등상환 계산기, 원금균등상환 계산기, 원금만기일시상환 계산기, 대출 이자 계산기, 대출 이자 계산 엑셀, 대출 이자, 이자 계산기, 대출 금리, 원리금균등상환, 원금균등상환, 원금만기일시상환, 대출계산기, 대출이자계산기, 이자계산기, 대출금리계산기, 적금계산기, 예금계산기, 대출이자 계산기, 적금금리 계산기, 이자계산, 대출 이자 계산법, 이자계산법">
     <meta name="description" content="쉽고 간단한 대출 이자 계산기는 온라인으로 바로 계산해 볼 수 있습니다. 엑셀(xls)보다 편리합니다. 원리금균등상환/원금균등상환/원금만기일시상환 방법을 지원합니다. 모바일 사용자 편의성 지원을 지원하여 모바일, 스마트폰, 태블릿 PC에서도 이용 가능 합니다. (대출계산기, 대출상환계산기, 대출이자계산기)">
-    <title>로또번호 추천</title>
+    <meta property="og:title" content="로또번호 생성 프로그램"/>
+    <meta property="og:description" content="당첨된 로또번호 통계를 바탕으로 로또번호 생성 프로그램"/>
+    <meta property="og:image" content="/img/lotto.jpg"/>
+    <title>로또번호 생성 프로그램</title>
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
@@ -146,8 +149,8 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">로또번호 추천</h1>
-                    <p class="mb-4">로또번호 추천</p>
+                    <h1 class="h3 mb-2 text-gray-800">로또번호 생성 프로그램</h1>
+                    <p class="mb-4">당첨된 로또번호 통계를 바탕으로 로또번호 생성 프로그램</p>
 
                     <!-- Content Row -->
                     <div class="row">
@@ -164,8 +167,17 @@
                                 <div class="card-body">
                                     <form>
 
+                                        <div class="form-group row">
+                                            <label for="input2" class="col-sm-3 col-form-label">회차 통계</label>
+                                            <div class="col-sm-4">
+                                              <select id="input2" class="custom-select my-1 mr-sm-2">
+                                                <option value="">직접입력</option>
+                                              </select>
+                                            </div>
+                                        </div>
+
                                         <div class="form-group">
-                                            <label for="input1">Example textarea</label>
+                                            <label for="input1">통계 데이터</label>
                                             <textarea class="form-control" id="input1" rows="3"></textarea>
                                         </div>
 
@@ -182,8 +194,25 @@
                         </div>
                     </div>
 
-					<div class="row" style="display: none;" id="resultDashboard">
+                    <div class="row" style="display: none;" id="resultChart">
+                        <div class="col-xl-6 col-lg-5">
 
+                            <!-- Project Card Example -->
+                            <div class="card shadow mb-4">
+                                <div class="card-header py-3">
+                                    <h6 class="m-0 font-weight-bold text-dark">열 차트</h6>
+                                </div>
+                                <div class="card-body">
+                                    <div class="chart-bar">
+                                        <canvas id="myBarChart"></canvas>
+                                    </div>
+                                </div>
+                            </div>
+    
+                        </div>
+                    </div>
+
+					<div class="row" style="display: none;" id="resultDashboard">
                         <div class="col-xl-3 col-md-6 mb-4">
                             <div class="card border-left-primary shadow h-100 py-2">
                                 <div class="card-body">
@@ -199,61 +228,9 @@
                                 </div>
                             </div>
                         </div>
-
-                    </div>
-
-                    <!-- Content Row -->
-                    <div class="row" style="display: none;" id="resultChart">
-
-                        <div class="col-xl-6 col-lg-5">
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-dark">그래프</h6>
-                                </div>
-                                <div class="card-body">
-                                    <div class="chart-bar" style="height: 400px;">
-                                        <canvas id="myBarChart"></canvas>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-xl-6 col-lg-5">
-                            <div class="card shadow mb-4" style="display: none;" id="resultTable">
-                                <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-dark">연도별 수령금액</h6>
-                                </div>
-                                <div class="card-body">
-                                    <div class="table-responsive">
-                                        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                            <thead>
-                                                <tr>
-                                                    <th class="text-center">연도</th>
-                                                    <th class="text-center">납입금</th>
-                                                    <th class="text-center">총이자</th>
-                                                    <th class="text-center">수령액</th>
-                                                </tr>
-                                            </thead>
-                                            <tfoot>
-                                                <tr>
-                                                    <th class="text-center">연도</th>
-                                                    <th class="text-center">납입금</th>
-                                                    <th class="text-center">총이자</th>
-                                                    <th class="text-center">수령액</th>
-                                                </tr>
-                                            </tfoot>
-                                            <tbody>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
 
                 </div>
-                <!-- /.container-fluid -->
                 <!-- /.container-fluid -->
 
             </div>
@@ -299,6 +276,7 @@
 
     <!-- Page level custom scripts -->
     <script src="js/lotto.js"></script>
+    <script src="data/lotto.js"></script>
 
 </body>
 
