--- a/lotto.html
+++ b/lotto.html
@@ -9,10 +9,10 @@
     <meta name="author" content="v-if">
     <meta name="keyword" content="대출 계산기, 대출 이자 계산기, 원리금 상환 계산기, 원리금균등상환 계산기, 원금균등상환 계산기, 원금만기일시상환 계산기, 대출 이자 계산기, 대출 이자 계산 엑셀, 대출 이자, 이자 계산기, 대출 금리, 원리금균등상환, 원금균등상환, 원금만기일시상환, 대출계산기, 대출이자계산기, 이자계산기, 대출금리계산기, 적금계산기, 예금계산기, 대출이자 계산기, 적금금리 계산기, 이자계산, 대출 이자 계산법, 이자계산법">
     <meta name="description" content="쉽고 간단한 대출 이자 계산기는 온라인으로 바로 계산해 볼 수 있습니다. 엑셀(xls)보다 편리합니다. 원리금균등상환/원금균등상환/원금만기일시상환 방법을 지원합니다. 모바일 사용자 편의성 지원을 지원하여 모바일, 스마트폰, 태블릿 PC에서도 이용 가능 합니다. (대출계산기, 대출상환계산기, 대출이자계산기)">
-    <meta property="og:title" content="로또번호 생성 프로그램"/>
-    <meta property="og:description" content="당첨된 로또번호 통계를 바탕으로 로또번호 생성 프로그램"/>
-    <meta property="og:image" content="/img/lotto.jpg"/>
-    <title>로또번호 생성 프로그램</title>
+    <meta property="og:title" content="로또번호 빅데이터 기반 추천 프로그램"/>
+    <meta property="og:description" content="로또번호 당첨통계 빅데이터 기반으로 자주 추첨되는 번호에 가중치를 달리하여 추천번호를 생성합니다."/>
+    <meta property="og:image" content="img/lotto.PNG"/>
+    <title>로또번호 빅데이터 기반 추천 프로그램</title>
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
@@ -149,8 +149,8 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">로또번호 생성 프로그램</h1>
-                    <p class="mb-4">당첨된 로또번호 통계를 바탕으로 로또번호 생성 프로그램</p>
+                    <h1 class="h3 mb-2 text-gray-800">로또번호 빅데이터 기반 추천 프로그램</h1>
+                    <p class="mb-4">로또번호 당첨통계 빅데이터 기반으로 자주 추첨되는 번호에 가중치를 달리하여 추천번호를 생성합니다.</p>
 
                     <!-- Content Row -->
                     <div class="row">
