--- a/interest.html
+++ b/interest.html
@@ -9,6 +9,9 @@
     <meta name="author" content="v-if">
     <meta name="keyword" content="대출 계산기, 대출 이자 계산기, 원리금 상환 계산기, 원리금균등상환 계산기, 원금균등상환 계산기, 원금만기일시상환 계산기, 대출 이자 계산기, 대출 이자 계산 엑셀, 대출 이자, 이자 계산기, 대출 금리, 원리금균등상환, 원금균등상환, 원금만기일시상환, 대출계산기, 대출이자계산기, 이자계산기, 대출금리계산기, 적금계산기, 예금계산기, 대출이자 계산기, 적금금리 계산기, 이자계산, 대출 이자 계산법, 이자계산법">
     <meta name="description" content="쉽고 간단한 대출 이자 계산기는 온라인으로 바로 계산해 볼 수 있습니다. 엑셀(xls)보다 편리합니다. 원리금균등상환/원금균등상환/원금만기일시상환 방법을 지원합니다. 모바일 사용자 편의성 지원을 지원하여 모바일, 스마트폰, 태블릿 PC에서도 이용 가능 합니다. (대출계산기, 대출상환계산기, 대출이자계산기)">
+    <meta property="og:title" content="쉽고 간단한 복리 이자 계산기"/>
+    <meta property="og:description" content="Compound Interest Calculator | 복리마법 계산기"/>
+    <meta property="og:image" content="img/interest.PNG"/>
     <title>쉽고 간단한 복리 이자 계산기</title>
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -63,6 +66,12 @@
                 <a class="nav-link" href="interest.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>복리 계산기</span></a>
+            </li>
+
+			<li class="nav-item active">
+                <a class="nav-link" href="lotto.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>로또번호 추천</span></a>
             </li>
 
             <!-- Divider -->
