--- a/stock.html
+++ b/stock.html
@@ -9,10 +9,10 @@
     <meta name="author" content="v-if">
     <meta name="keyword" content="대출 계산기, 대출 이자 계산기, 원리금 상환 계산기, 원리금균등상환 계산기, 원금균등상환 계산기, 원금만기일시상환 계산기, 대출 이자 계산기, 대출 이자 계산 엑셀, 대출 이자, 이자 계산기, 대출 금리, 원리금균등상환, 원금균등상환, 원금만기일시상환, 대출계산기, 대출이자계산기, 이자계산기, 대출금리계산기, 적금계산기, 예금계산기, 대출이자 계산기, 적금금리 계산기, 이자계산, 대출 이자 계산법, 이자계산법">
     <meta name="description" content="쉽고 간단한 대출 이자 계산기는 온라인으로 바로 계산해 볼 수 있습니다. 엑셀(xls)보다 편리합니다. 원리금균등상환/원금균등상환/원금만기일시상환 방법을 지원합니다. 모바일 사용자 편의성 지원을 지원하여 모바일, 스마트폰, 태블릿 PC에서도 이용 가능 합니다. (대출계산기, 대출상환계산기, 대출이자계산기)">
-    <meta property="og:title" content="쉽고 간단한 복리 이자 계산기"/>
-    <meta property="og:description" content="Compound Interest Calculator | 복리마법 계산기"/>
-    <meta property="og:image" content="img/interest.PNG"/>
-    <title>none</title>
+    <meta property="og:title" content="주식 백테스팅"/>
+    <meta property="og:description" content="만약 10년전 20년전에 그 주식을 샀더라면... 이런 생각 한번쯤 해보셨을텐데요. 아래 입력폼에 주식, 투자일자, 투자금($)을 입력하시면 지금 기준으로 얼마나 자산이 증가하였는지 백테스팅 해볼 수 있습니다."/>
+    <meta property="og:image" content="img/stock.PNG"/>
+    <title>주식 백테스팅</title>
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
@@ -228,7 +228,7 @@
                         <div class="col-xl-6 col-lg-5">
                             <div class="card shadow mb-4" >
                                 <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-dark">none</h6>
+                                    <h6 class="m-0 font-weight-bold text-dark">백테스팅 결과</h6>
                                 </div>
                                 <div class="card-body">
                                     <div class="table-responsive">
