--- a/stock.html
+++ b/stock.html
@@ -180,6 +180,7 @@
                                             <div class="form-group col-md-4">
                                               <label for="input1">종목선택</label>
                                               <select id="input1" class="custom-select">
+                                                <option value="">선택하세요.</option>
                                               </select>
                                             </div>
                                             <div class="form-group col-md-3">
