--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
                     <span>로또번호 추천</span></a>
             </li>
 
+			<li class="nav-item active">
+                <a class="nav-link" href="stock.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>주식 백테스팅</span></a>
+            </li>
+
             <!-- Divider -->
             <hr class="sidebar-divider">
 
