--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
             </li>
 
 			<li class="nav-item active">
+                <a class="nav-link" href="dividend.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>배당 계산기</span></a>
+            </li>
+
+			<li class="nav-item active">
+                <a class="nav-link" href="stock.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>주식 백테스팅</span></a>
+            </li>
+
+			<li class="nav-item active">
                 <a class="nav-link" href="lotto.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>로또번호 추천</span></a>
