--- a/stock.html
+++ b/stock.html
@@ -266,7 +266,7 @@
                         <div class="col-xl-6 col-lg-5">
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-dark">평가금액 비교</h6>
+                                    <h6 class="m-0 font-weight-bold text-dark">투자금액 vs 평가금액 비교</h6>
                                 </div>
                                 <div class="card-body">
                                     <div class="chart-bar">
@@ -283,7 +283,7 @@
                         <div class="col-xl-6 col-lg-5">
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-dark">수익률 차트</h6>
+                                    <h6 class="m-0 font-weight-bold text-dark">평가금액 추이</h6>
                                 </div>
                                 <div class="card-body">
                                     <div class="chart-bar">
