--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="쉽고 간단한 대출 이자 계산기"/>
     <meta property="og:description" content="대출금의 상환금액과 이자를 계산합니다."/>
     <meta property="og:image" content="img/loan.PNG"/>
+    <meta name="google-adsense-account" content="ca-pub-8932745447223637">
     <title>쉽고 간단한 대출 이자 계산기</title>
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
