--- a/interest.html
+++ b/interest.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="쉽고 간단한 복리 이자 계산기"/>
     <meta property="og:description" content="Compound Interest Calculator | 복리마법 계산기"/>
     <meta property="og:image" content="img/interest.PNG"/>
+    <meta name="google-adsense-account" content="ca-pub-8932745447223637">
     <title>쉽고 간단한 복리 이자 계산기</title>
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
