--- a/dividend.html
+++ b/dividend.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="쉽고 간단한 배당 계산기"/>
     <meta property="og:description" content="쉽고 간단한 배당 계산기"/>
     <meta property="og:image" content="img/dividend.PNG"/>
+    <meta name="google-adsense-account" content="ca-pub-8932745447223637">
     <title>배당 계산기</title>
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
