--- a/stock.html
+++ b/stock.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="주식 백테스팅"/>
     <meta property="og:description" content="만약 10년전 20년전에 그 주식을 샀더라면... 이런 생각 한번쯤 해보셨을텐데요. 아래 입력폼에 주식, 투자일자, 투자금($)을 입력하시면 지금 기준으로 얼마나 자산이 증가하였는지 백테스팅 해볼 수 있습니다."/>
     <meta property="og:image" content="img/stock.PNG"/>
+    <meta name="google-adsense-account" content="ca-pub-8932745447223637">
     <title>주식 백테스팅</title>
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
