--- a/lotto.html
+++ b/lotto.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="로또번호 빅데이터 기반 추천 프로그램"/>
     <meta property="og:description" content="로또번호 당첨통계 빅데이터 기반으로 자주 추첨되는 번호에 가중치를 달리하여 추천번호를 생성합니다."/>
     <meta property="og:image" content="img/lotto.PNG"/>
+    <meta name="google-adsense-account" content="ca-pub-8932745447223637">
     <title>로또번호 빅데이터 기반 추천 프로그램</title>
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
